wikipedia_pages/manifests/deployment_wikipedia_pages.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wikipedia-pages
  namespace: wikipedia_pages
  labels:
    app: wikipedia-pages
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wikipedia-pages
  template:
    metadata:
      labels:
        app: wikipedia-pages
    spec:
      containers:
        - name: nginx-server
          image: nginx:latest
          volumeMounts:
            - name: html
              mountPath: /usr/share/nginx/html
      volumes:
        - name: html
          emptyDir: {}
