wikipedia_pages/manifests/service_wikipedia_pages.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: wikipedia-pages
  name: wikipedia-pages-svc
spec:
  type: ClusterIP
  selector:
    app: wikipedia-pages
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
